feat(jvm): 添加JVM内存溢出实战代码及测试文档
- 添加Java堆溢出测试代码 HeapOutOfMemory
- 添加栈深度溢出测试代码 StackOverflowError
- 添加栈内存溢出测试代码 StackOutOfMemory
- 添加方法区溢出测试代码 MethodAreaOutOfMemory（使用CGLib）
- 添加运行时常量池溢出测试代码 RuntimeConstantPoolOutOfMemory
- 添加直接内存溢出测试代码 DirectMemoryOutOfMemory
- 添加统一测试运行器 OutOfMemoryTestRunner
- 添加OOM代码说明文档 chapter-02-oom-code-guide.md
- 添加OOM测试结果文档 chapter-02-oom-test-results.md
- 更新pom.xml添加CGLib依赖
- 更新相关JVM文档